# otus_c_dev_hws

./: README.md
final_project/: Makefile  README.md  logger.c  logger.h  v_switch.c  vs_port.c
hw03/: Makefile  README.md  zipjpeg_test.c
hw04/: Makefile  README.md  codepages.h  recode.c
hw06/: Makefile  README.md  hashtable.c  hashtable.h  wc.c
hw08/: Makefile  README.md  weather.c
hw09/: Makefile  README.md  c-prog.c
hw12/: README.md
hw13/: 0001-Fixed-memory-leaks-in-clib.patch  README.md  valgrind_report.txt
hw13/clib/src/common/: clib-package.c
hw15/: Makefile  README.md  gtk_tree.c
hw16/: CMakeLists.txt  README.md  logger.c  logger.h  test.c
hw20/: Makefile  README.md  demon.c  demon.conf
hw21/: Makefile  README.md  crc32.c  crc_mmap.c
hw22/: Makefile  README.md  aparser.c  stat.ods
hw25/: Makefile  README.md  telefig.c
hw27/: Makefile  README.md  chttp.c
hw27/www/: index.html
hw32/: Makefile  README.md  db.sqlite  dbstat.c
hw33/: Makefile  README.md  cube.c
hw35/: Makefile  README.md  tetris.c
